# deer-node

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  argcfile  docker-compose.yml  justfile  rust-toolchain  rustfmt.toml
.github/workflows/: check.yml  release-dev.yaml  release.yaml
.maintain/: frame-weight-template.hbs
node/: Cargo.toml  build.rs
node/cli/: Cargo.toml  build.rs
node/cli/res/: mainnet.json  testnet.json
node/cli/src/: browser.rs  chain_spec.rs  cli.rs  command.rs  lib.rs  service.rs
node/cli/tests/: build_spec_works.rs  check_block_works.rs  common.rs  export_import_flow.rs  inspect_works.rs  purge_chain_works.rs  running_the_node_and_interrupt.rs  telemetry.rs  temp_base_path_works.rs  version.rs
node/executor/: Cargo.toml
node/inspect/: Cargo.toml
node/primitives/: Cargo.toml
node/rpc/: Cargo.toml
node/rpc/src/: lib.rs
node/runtime/: Cargo.toml
node/runtime/src/: constants.rs  impls.rs  lib.rs
node/src/: chain_spec.rs  cli.rs  command.rs  executor.rs  lib.rs  rpc.rs  service.rs
pallets/bridge/: Cargo.toml
pallets/bridge-transfer/: Cargo.toml
pallets/bridge-transfer/src/: lib.rs  mock.rs  tests.rs
pallets/bridge/src/: hashing.rs  lib.rs  mock.rs  tests.rs
pallets/nft/: Cargo.toml
pallets/nft-auction/: Cargo.toml
pallets/nft-auction/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
pallets/nft-order/: Cargo.toml
pallets/nft-order/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
pallets/nft/rpc/: Cargo.toml
pallets/nft/rpc/runtime-api/: Cargo.toml
pallets/nft/rpc/runtime-api/src/: lib.rs
pallets/nft/rpc/src/: lib.rs
pallets/nft/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
pallets/nft2/: Cargo.toml
pallets/nft2/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  tests.rs
pallets/storage/: Cargo.toml
pallets/storage/rpc/: Cargo.toml
pallets/storage/rpc/runtime-api/: Cargo.toml
pallets/storage/rpc/runtime-api/src/: lib.rs
pallets/storage/rpc/src/: lib.rs
pallets/storage/src/: benchmarking.rs  constants.rs  lib.rs  migrations.rs  mock.rs  sign.rs  tests.rs  weights.rs
pallets/template/: Cargo.toml
primitives/: Cargo.toml
primitives/src/: lib.rs
rpc/: Cargo.toml
rpc/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: constants.rs  impls.rs  lib.rs
scripts/: prepare-test-net.sh  run_all_benches.sh  runtime-benches.sh  setup.sh  testnet.sh
