[package]
name = 'nft360-runtime'
edition = '2018'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { version = '2.0.0', package = 'parity-scale-codec', features = ['derive'], default-features = false }
frame-benchmarking = { version = '3.1.0', path = '../substrate/frame/benchmarking', default-features = false, optional = true }
frame-executive = { version = '3.0.0', path = '../substrate/frame/executive', default-features = false }
frame-support = { version = '3.0.0', path = '../substrate/frame/support', default-features = false }
frame-system = { version = '3.0.0', path = '../substrate/frame/system', default-features = false }
frame-system-benchmarking = { version = '3.0.0', path = '../substrate/frame/system/benchmarking', default-features = false, optional = true }
frame-system-rpc-runtime-api = { version = '3.0.0', path = '../substrate/frame/system/rpc/runtime-api', default-features = false }
hex-literal = { version = '0.3.1', optional = true }
pallet-aura = { version = '3.0.0', path = '../substrate/frame/aura', default-features = false }
pallet-balances = { version = '3.0.0', path = '../substrate/frame/balances', default-features = false }
pallet-grandpa = { version = '3.1.0', path = '../substrate/frame/grandpa', default-features = false }
pallet-randomness-collective-flip = { version = '3.0.0', path = '../substrate/frame/randomness-collective-flip', default-features = false }
pallet-sudo = { version = '3.0.0', path = '../substrate/frame/sudo', default-features = false }
pallet-template = { version = '3.0.0', path = '../pallets/template', default-features = false }
pallet-timestamp = { version = '3.0.0', path = '../substrate/frame/timestamp', default-features = false }
pallet-transaction-payment = { version = '3.0.0', path = '../substrate/frame/transaction-payment', default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = '3.0.0', path = '../substrate/frame/transaction-payment/rpc/runtime-api', default-features = false }
sp-api = { version = '3.0.0', path = '../substrate/primitives/api', default-features = false }
sp-block-builder = { version = '3.0.0', path = '../substrate/primitives/block-builder', default-features = false }
sp-consensus-aura = { version = '0.9.0', path = '../substrate/primitives/consensus/aura', default-features = false }
sp-core = { version = '3.0.0', path = '../substrate/primitives/core', default-features = false }
sp-inherents = { version = '3.0.0', path = '../substrate/primitives/inherents', default-features = false }
sp-offchain = { version = '3.0.0', path = '../substrate/primitives/offchain', default-features = false }
sp-runtime = { version = '3.0.0', path = '../substrate/primitives/runtime', default-features = false }
sp-session = { version = '3.0.0', path = '../substrate/primitives/session', default-features = false }
sp-std = { version = '3.0.0', path = '../substrate/primitives/std', default-features = false }
sp-transaction-pool = { version = '3.0.0', path = '../substrate/primitives/transaction-pool', default-features = false }
sp-version = { version = '3.0.0', path = '../substrate/primitives/version', default-features = false }

[build-dependencies]
substrate-wasm-builder = { version = '4.0.0', path = '../substrate/utils/wasm-builder' }

[features]
default = ['std']
runtime-benchmarks = [
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'hex-literal',
    'pallet-balances/runtime-benchmarks',
    'pallet-template/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
]
std = [
    'codec/std',
    'frame-executive/std',
    'frame-support/std',
    'frame-system-rpc-runtime-api/std',
    'frame-system/std',
    'pallet-aura/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    'pallet-randomness-collective-flip/std',
    'pallet-sudo/std',
    'pallet-template/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-transaction-payment/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
]
