[package]
name = "deer-cli"
version = "0.2.2"
authors = ["Deer Network"]
description = "Official Rust implementation of the Deer protocol"
build = "build.rs"
edition = "2018"
license = "Apache 2.0"
homepage = "https://deernetwork.org"
repository = "https://github.com/DeerNetwork/deer-node/"

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "deer-node"
path = "bin/main.rs"
required-features = ["cli"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "2.2.0" }
serde = { version = "1.0.126", features = ["derive"] }
futures = { version = "0.3.9", features = ["compat"] }
hex-literal = "0.3.1"
log = "0.4.8"
rand = "0.7.2"
structopt = { version = "0.3.8", optional = true }
parking_lot = "0.11.1"

# primitives
sp-authority-discovery = {  path = "../../substrate/primitives/authority-discovery" }
sp-consensus-babe = { path = "../../substrate/primitives/consensus/babe" }
grandpa-primitives = { package = "sp-finality-grandpa", path = "../../substrate/primitives/finality-grandpa" }
sp-core = { path = "../../substrate/primitives/core" }
sp-runtime = { path = "../../substrate/primitives/runtime" }
sp-timestamp = { path = "../../substrate/primitives/timestamp" }
sp-authorship = { path = "../../substrate/primitives/authorship" }
sp-inherents = { path = "../../substrate/primitives/inherents" }
sp-keyring = { path = "../../substrate/primitives/keyring" }
sp-keystore = { path = "../../substrate/primitives/keystore" }
sp-io = { path = "../../substrate/primitives/io" }
sp-consensus = { path = "../../substrate/primitives/consensus/common" }
sp-transaction-pool = { path = "../../substrate/primitives/transaction-pool" }
sp-transaction-storage-proof = { path = "../../substrate/primitives/transaction-storage-proof" }

# client dependencies
sc-client-api = { path = "../../substrate/client/api" }
sc-chain-spec = { path = "../../substrate/client/chain-spec" }
sc-consensus = { path = "../../substrate/client/consensus/common" }
sc-transaction-pool = { path = "../../substrate/client/transaction-pool" }
sc-transaction-pool-api = { path = "../../substrate/client/transaction-pool/api" }
sc-network = { path = "../../substrate/client/network" }
sc-consensus-slots = { path = "../../substrate/client/consensus/slots" }
sc-consensus-babe = { path = "../../substrate/client/consensus/babe" }
sc-consensus-uncles = { path = "../../substrate/client/consensus/uncles" }
grandpa = { package = "sc-finality-grandpa", path = "../../substrate/client/finality-grandpa" }
sc-client-db = { default-features = false, path = "../../substrate/client/db" }
sc-offchain = { path = "../../substrate/client/offchain" }
sc-rpc = { path = "../../substrate/client/rpc" }
sc-basic-authorship = { path = "../../substrate/client/basic-authorship" }
sc-service = { default-features = false, path = "../../substrate/client/service" }
sc-tracing = { path = "../../substrate/client/tracing" }
sc-telemetry = { path = "../../substrate/client/telemetry" }
sc-authority-discovery = {  path = "../../substrate/client/authority-discovery" }
sc-sync-state-rpc = { path = "../../substrate/client/sync-state-rpc" }

# frame dependencies
pallet-indices = { path = "../../substrate/frame/indices" }
pallet-timestamp = { path = "../../substrate/frame/timestamp", default-features = false }
pallet-contracts = { path = "../../substrate/frame/contracts" }
frame-system = { path = "../../substrate/frame/system" }
pallet-balances = { path = "../../substrate/frame/balances" }
pallet-transaction-payment = { path = "../../substrate/frame/transaction-payment" }
frame-support = { path = "../../substrate/frame/support", default-features = false }
pallet-im-online = { path = "../../substrate/frame/im-online", default-features = false }
pallet-authority-discovery = { path = "../../substrate/frame/authority-discovery" }
pallet-staking = { path = "../../substrate/frame/staking" }
pallet-grandpa = { path = "../../substrate/frame/grandpa" }

# node-specific dependencies
node-runtime = { package = "deer-runtime", path = "../runtime" }
node-rpc = { package = "deer-rpc", path = "../rpc" }
node-primitives = { package = "deer-primitives", path = "../primitives" }
node-executor = { package="deer-executor", path = "../executor" }

# CLI-specific dependencies
sc-cli = { optional = true, path = "../../substrate/client/cli" }
frame-benchmarking-cli = { optional = true, path = "../../substrate/utils/frame/benchmarking-cli" }
node-inspect = { package = "deer-inspect", optional = true, path = "../inspect" }
try-runtime-cli = { optional = true, path = "../../substrate/utils/frame/try-runtime/cli" }

# WASM-specific dependencies
wasm-bindgen = { version = "0.2.73", optional = true }
wasm-bindgen-futures = { version = "0.4.18", optional = true }
browser-utils = { package = "substrate-browser-utils", path = "../../substrate/utils/browser", optional = true }
libp2p-wasm-ext = { version = "0.29", features = ["websocket"], optional = true }

[target.'cfg(target_arch="x86_64")'.dependencies]
node-executor = { package="deer-executor", path = "../executor", features = [ "wasmtime" ] }
sc-cli = { optional = true, path = "../../substrate/client/cli", features = [ "wasmtime" ] }
sc-service = { path = "../../substrate/client/service", default-features = false, features = [ "wasmtime" ] }
sp-trie = { path = "../../substrate/primitives/trie", default-features = false, features = ["memory-tracker"] }

[dev-dependencies]
sc-keystore = { path = "../../substrate/client/keystore" }
sc-consensus = { path = "../../substrate/client/consensus/common" }
sc-consensus-babe = { path = "../../substrate/client/consensus/babe" }
sc-consensus-epochs = { path = "../../substrate/client/consensus/epochs" }
sc-service-test = { path = "../../substrate/client/service/test" }
futures = "0.3.9"
tempfile = "3.1.0"
assert_cmd = "1.0"
nix = "0.19"
serde_json = "1.0"
regex = "1"
platforms = "1.1"
async-std = { version = "1.6.5", features = ["attributes"] }
soketto = "0.4.2"

[build-dependencies]
structopt = { version = "0.3.8", optional = true }
node-inspect = { package = "deer-inspect", optional = true, path = "../inspect" }
frame-benchmarking-cli = { optional = true, path = "../../substrate/utils/frame/benchmarking-cli" }
substrate-build-script-utils = { optional = true, path = "../../substrate/utils/build-script-utils" }
substrate-frame-cli = { optional = true, path = "../../substrate/utils/frame/frame-utilities-cli" }
try-runtime-cli = { optional = true, path = "../../substrate/utils/frame/try-runtime/cli" }

[build-dependencies.sc-cli]
package = "sc-cli"
path = "../../substrate/client/cli"
optional = true

[features]
default = [ "cli" ]
browser = [
	"browser-utils",
	"wasm-bindgen",
	"wasm-bindgen-futures",
	"libp2p-wasm-ext",
]
cli = [
	"node-executor/wasmi-errno",
	"node-inspect",
	"sc-cli",
	"frame-benchmarking-cli",
	"substrate-frame-cli",
	"sc-service/db",
	"structopt",
	"substrate-build-script-utils",
	"try-runtime-cli",
]
runtime-benchmarks = [
	"node-runtime/runtime-benchmarks",
	"frame-benchmarking-cli",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = [
	"node-runtime/try-runtime",
	"try-runtime-cli",
]
