[package]
name = "deer-cli"
version = "0.4.0"
authors = ["Deer Network"]
description = "Official Rust implementation of the Deer protocol"
build = "build.rs"
edition = "2018"
license = "Apache 2.0"
homepage = "https://deernetwork.org"
repository = "https://github.com/DeerNetwork/deer-node/"

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "deer-node"
path = "bin/main.rs"
required-features = ["cli"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "2.2.0" }
serde = { version = "1.0.126", features = ["derive"] }
futures = "0.3.16"
hex-literal = "0.3.4"
log = "0.4.8"
rand = "0.7.2"
structopt = { version = "0.3.25", optional = true }
parking_lot = "0.11.1"

# primitives
sp-authority-discovery = {  path = "../../substrate/primitives/authority-discovery" }
sp-consensus-babe = { path = "../../substrate/primitives/consensus/babe" }
grandpa-primitives = { package = "sp-finality-grandpa", path = "../../substrate/primitives/finality-grandpa" }
sp-api = { path = "../../substrate/primitives/api" }
sp-core = { path = "../../substrate/primitives/core" }
sp-runtime = { path = "../../substrate/primitives/runtime" }
sp-timestamp = { path = "../../substrate/primitives/timestamp" }
sp-authorship = { path = "../../substrate/primitives/authorship" }
sp-inherents = { path = "../../substrate/primitives/inherents" }
sp-keyring = { path = "../../substrate/primitives/keyring" }
sp-keystore = { path = "../../substrate/primitives/keystore" }
sp-consensus = { path = "../../substrate/primitives/consensus/common" }
sp-transaction-pool = { path = "../../substrate/primitives/transaction-pool" }
sp-transaction-storage-proof = { path = "../../substrate/primitives/transaction-storage-proof" }

# client dependencies
sc-client-api = { path = "../../substrate/client/api" }
sc-chain-spec = { path = "../../substrate/client/chain-spec" }
sc-consensus = { path = "../../substrate/client/consensus/common" }
sc-transaction-pool = { path = "../../substrate/client/transaction-pool" }
sc-transaction-pool-api = { path = "../../substrate/client/transaction-pool/api" }
sc-network = { path = "../../substrate/client/network" }
sc-consensus-slots = { path = "../../substrate/client/consensus/slots" }
sc-consensus-babe = { path = "../../substrate/client/consensus/babe" }
sc-consensus-uncles = { path = "../../substrate/client/consensus/uncles" }
grandpa = { package = "sc-finality-grandpa", path = "../../substrate/client/finality-grandpa" }
sc-rpc = { path = "../../substrate/client/rpc" }
sc-basic-authorship = { path = "../../substrate/client/basic-authorship" }
sc-service = { default-features = false, path = "../../substrate/client/service" }
sc-tracing = { path = "../../substrate/client/tracing" }
sc-telemetry = { path = "../../substrate/client/telemetry" }
sc-authority-discovery = {  path = "../../substrate/client/authority-discovery" }
sc-executor = { path = "../../substrate/client/executor" }
sc-sync-state-rpc = { path = "../../substrate/client/sync-state-rpc" }

# frame dependencies
frame-system = { path = "../../substrate/frame/system" }
frame-system-rpc-runtime-api = { path = "../../substrate/frame/system/rpc/runtime-api" }
pallet-transaction-payment = { path = "../../substrate/frame/transaction-payment" }
pallet-im-online = { path = "../../substrate/frame/im-online", default-features = false }

# node-specific dependencies
node-runtime = { package = "deer-runtime", path = "../runtime" }
node-rpc = { package = "deer-rpc", path = "../rpc" }
node-primitives = { package = "deer-primitives", path = "../primitives" }
node-executor = { package="deer-executor", path = "../executor" }

# CLI-specific dependencies
sc-cli = { optional = true, path = "../../substrate/client/cli" }
frame-benchmarking-cli = { optional = true, path = "../../substrate/utils/frame/benchmarking-cli" }
node-inspect = { package = "deer-inspect", optional = true, path = "../inspect" }
try-runtime-cli = { optional = true, path = "../../substrate/utils/frame/try-runtime/cli" }

[target.'cfg(any(target_arch="x86_64", target_arch="aarch64"))'.dependencies]
node-executor = { package="deer-executor", path = "../executor", features = [ "wasmtime" ] }
sc-cli = { optional = true, path = "../../substrate/client/cli", features = [ "wasmtime" ] }
sc-service = { path = "../../substrate/client/service", default-features = false, features = [ "wasmtime" ] }
sp-trie = { path = "../../substrate/primitives/trie", default-features = false, features = ["memory-tracker"] }

[dev-dependencies]
sc-keystore = { path = "../../substrate/client/keystore" }
sc-client-db = { path = "../../substrate/client/db" }
sc-consensus = { path = "../../substrate/client/consensus/common" }
sc-consensus-babe = { path = "../../substrate/client/consensus/babe" }
sc-consensus-epochs = { path = "../../substrate/client/consensus/epochs" }
sc-service-test = { path = "../../substrate/client/service/test" }
sc-block-builder = { path = "../../substrate/client/block-builder" }
sp-tracing = { path = "../../substrate/primitives/tracing" }
sp-blockchain = { path = "../../substrate/primitives/blockchain" }
futures = "0.3.16"
tempfile = "3.1.0"
assert_cmd = "2.0.2"
nix = "0.23"
serde_json = "1.0"
regex = "1"
platforms = "2.0"
async-std = { version = "1.10.0", features = ["attributes"] }
soketto = "0.4.2"
criterion = { version = "0.3.5", features = [ "async_tokio" ] }
tokio = { version = "1.13", features = ["macros", "time"] }
jsonrpsee-ws-client = "0.4.1"
wait-timeout = "0.2"
remote-externalities = { path = "../../substrate/utils/frame/remote-externalities" }
pallet-timestamp = { path = "../../substrate/frame/timestamp" }

[build-dependencies]
structopt = { version = "0.3.25", optional = true }
node-inspect = { package = "deer-inspect", optional = true, path = "../inspect" }
frame-benchmarking-cli = { optional = true, path = "../../substrate/utils/frame/benchmarking-cli" }
substrate-build-script-utils = { optional = true, path = "../../substrate/utils/build-script-utils" }
substrate-frame-cli = { optional = true, path = "../../substrate/utils/frame/frame-utilities-cli" }
try-runtime-cli = { optional = true, path = "../../substrate/utils/frame/try-runtime/cli" }
sc-cli = { path = "../../substrate/client/cli", optional = true }
pallet-balances = { path = "../../substrate/frame/balances" }

[features]
default = [ "cli" ]
cli = [
	"node-executor/wasmi-errno",
	"node-inspect",
	"sc-cli",
	"frame-benchmarking-cli",
	"substrate-frame-cli",
	"sc-service/db",
	"structopt",
	"substrate-build-script-utils",
	"try-runtime-cli",
]
runtime-benchmarks = [
	"node-runtime/runtime-benchmarks",
	"frame-benchmarking-cli",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = ["node-runtime/try-runtime", "try-runtime-cli"]
