[package]
name = "deer-executor"
version = "0.2.0"
description = "Official Rust implementation of the Deer protocol"
edition = "2018"
license = "Apache 2.0"
homepage = "https://deernetwork.org"
repository = "https://github.com/DeerNetwork/deer-node/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.2.0" }
scale-info = { version = "1.0", features = ["derive"] }
node-primitives = { package = "deer-primitives", path = "../primitives" }
node-runtime = { package = "deer-runtime", path = "../runtime" }
sc-executor = { path = "../../substrate/client/executor" }
sp-core = { path = "../../substrate/primitives/core" }
sp-keystore = { path = "../../substrate/primitives/keystore" }
sp-state-machine = { path = "../../substrate/primitives/state-machine" }
sp-trie = { path = "../../substrate/primitives/trie" }
frame-benchmarking = { path = "../../substrate/frame/benchmarking" }

[dev-dependencies]
criterion = "0.3.0"
frame-support = { path = "../../substrate/frame/support" }
frame-system = { path = "../../substrate/frame/system" }

pallet-balances = { path = "../../substrate/frame/balances" }
pallet-contracts = { path = "../../substrate/frame/contracts" }
pallet-im-online = { path = "../../substrate/frame/im-online" }
pallet-timestamp = { path = "../../substrate/frame/timestamp" }
pallet-treasury = { path = "../../substrate/frame/treasury" }
sp-application-crypto = { path = "../../substrate/primitives/application-crypto" }
sp-consensus-babe = { path = "../../substrate/primitives/consensus/babe" }
sp-runtime = { path = "../../substrate/primitives/runtime" }
sp-externalities = { path = "../../substrate/primitives/externalities" }
wat = "1.0"
futures = "0.3.9"

[features]
wasmtime = ["sc-executor/wasmtime"]
wasmi-errno = ["sc-executor/wasmi-errno"]
stress-test = []
