[package]
name = "deer-inspect"
version = "0.2.0"
edition = "2018"
license = "Apache 2.0"
homepage = "https://deernetwork.org"
repository = "https://github.com/DeerNetwork/deer-node/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.2.0" }
derive_more = "0.99"
log = "0.4.8"
sc-cli = { path = "../../substrate/client/cli" }
sc-client-api = { path = "../../substrate/client/api" }
sc-service = { default-features = false, path = "../../substrate/client/service" }
sp-blockchain = { path = "../../substrate/primitives/blockchain" }
sp-core = { path = "../../substrate/primitives/core" }
sp-runtime = { path = "../../substrate/primitives/runtime" }
structopt = "0.3.8"
